# MasterLee

./: .gitignore  README.md  dns.html  host.html  index.html  package-lock.json  package.json  vite.config.js
.github/: release.info
.github/scripts/: update.mjs
.github/workflows/: release.yml
src/: App.vue  Host.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/config/: config.default.json  config4.json
src-tauri/src/: main.rs  menu.rs  state.rs  system_tray.rs
src-tauri/src/commands/: dns.rs  mod.rs  proxy.rs
src-tauri/src/core/: dns.rs  hosts.rs  http_proxy.rs  mod.rs  tls.rs
src-tauri/src/core/dns_stamp/: decode.rs  encode.rs  error.rs  mod.rs
src/components/: Greet.vue  Main.vue
src/components/main/: Demo.vue  DoH.vue  Host.vue  Proxy.vue  Update.vue
