[package]
name = "master_lee"
version = "0.0.9"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "dialog-open", "fs-all", "http-all", "path-all", "shell-open", "system-tray", "updater", "window-all"] }

futures = "~0.3.25"
# 用于解析dns stamp
# dns-stamp-parser = "~3.0.0"
base64 = "~0.13.0"
bitflags = "^1.3"
thiserror = "~1.0.23"
# 用于http请求
reqwest = { version = "0.11", features = ["json"] }
# 用于tls
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"] }
webpki-roots = "0.22"
# 用于doh
trust-dns-resolver = { version = "0.22.0", features = ["dns-over-rustls", "dns-over-https", "dns-over-https-rustls"] }
# 用于并发hashmap
dashmap = "5.4.0"
# 用于静态初始化
lazy_static = "1.4.0"
# 用于异步
tokio = { version = "1", features = ["full"] }
# 用于全局配置
# once_cell = "1.16.0"

# 用于正则
regex = "1.5.4"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
